# BasicIntentServer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  download_models.sh  for_restart.sh  install.sh  main.cpp  start.sh  stop.sh
cmake/: gflags.cmake  httplib.cmake  libtorch.cmake  nlohmann_json.cmake
script/: create_ssh_keygen.sh  install_cmake.sh  install_gcc.sh
server/basic_intent_server/: basic_intent_server.cpp  basic_intent_server.h  settings.cpp  settings.h
server/basic_intent_server/config/: models.json
server/basic_intent_server/control/: basic_intent.h  control_basic_intent.cpp  control_basic_intent.h  control_heart_beat.cpp  control_heart_beat.h  heart_beat.h
server/basic_intent_server/json_config/: models.json
server/basic_intent_server/service/: basic_intent.h  service_basic_intent.cpp  service_basic_intent.h
test/: test_utf8proc.cpp
toolbox/nlp/: CMakeLists.txt
toolbox/nlp/cmake/: utf8proc.cmake
toolbox/nlp/data/tokenizer/bert_tokenizer/: README.md  tokenization.cpp  tokenization.h
